--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ button {
   padding: 18px 10px;
   margin: 10px;
 
+  transition: all 0.3s;
   cursor: pointer;
 }
 
@@ -48,7 +49,8 @@ h2 {
 /** Texts */
 h3,
 .category-text,
-.lives-text {
+.lives-text,
+.clue-text {
   font-size: 1.8rem;
   margin-block: 1em;
 }
@@ -91,4 +93,19 @@ canvas {
   color: #fff;
   padding: 15px;
   border: 2px dashed #fff;
+}
+
+/** hovers */
+
+button:hover {
+  color: #c1d72e;
+  background-color: #fff;
+}
+
+#alphabet .letter:hover {
+  color: #fff;
+  background-color: #c1d72e;
+}
+.active {
+  opacity: 0.4;
 }
